Further alignment fixes

--- a/style/character.css
+++ b/style/character.css
@@ -45,6 +45,7 @@
 	min-width: 20px;
 	min-height: 20px;
 	margin: auto;
+	margin-left: 5px;
 }
 .forbidden-lands .character .bio .avatar img:hover {
 	box-shadow: 0 0 10px red;
